--- a/block14hw/index.html
+++ b/block14hw/index.html
@@ -7,6 +7,6 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <h1>Look at the console :)</h1>
+    <h1>Look at the console :3</h1>
   </body>
 </html>
